# Openbrowser

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  ROADMAP.md  test.sh
.github/workflows/: ci.yml
adapters/python/open-playwright/: pyproject.toml
adapters/python/open-playwright/open_playwright/: __init__.py  async_api.py  open_ext.py  sync_api.py
adapters/python/open-playwright/tests/: __init__.py
adapters/tests/: test_cdp_compat.py
ai-agent/: ROADMAP.md
ai-agent/open-browser/: README.md  eslint.config.js  package-lock.json  package.json  tsconfig.test.json
ai-agent/pardus-browser/: .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
bench/compare/: package.json
bench/site/: index.html  scripts.html  semantic.html
crates/open-cdp/: Cargo.toml
crates/open-cdp/src/: error.rs  lib.rs  provider.rs  server.rs
crates/open-cdp/src/domain/: browser.rs  css.rs  dom.rs  input.rs  log.rs  mod.rs  network.rs  oauth.rs  open_ext.rs  page.rs  target.rs
crates/open-cdp/src/protocol/: event_bus.rs  message.rs  mod.rs  node_map.rs  registry.rs  router.rs  target.rs
crates/open-cdp/src/transport/: http.rs  ws.rs
crates/open-cdp/tests/: domain_context_test.rs  domain_context_unit_test.rs  open_interact_test.rs
crates/open-challenge/: Cargo.toml
crates/open-challenge/src/: detector.rs  interceptor.rs  lib.rs  resolver.rs
crates/open-cli/: Cargo.toml
crates/open-cli/src/: config.rs  main.rs
crates/open-cli/src/commands/: clean.rs  interact.rs  map.rs  mod.rs  navigate.rs  repl.rs  screenshot.rs  serve.rs  tab.rs
crates/open-core/: Cargo.toml
crates/open-core/src/: app.rs  config.rs  dedup.rs  lib.rs  page.rs  page_analysis.rs  pdf.rs  session.rs  url_policy.rs
crates/open-core/src/browser/: helpers.rs  history.rs  interact.rs  mod.rs  navigate.rs  tabs.rs  traits.rs
crates/open-core/src/cache/: disk_cache.rs  dom_cache.rs  http_cache_policy.rs  mod.rs  resource_cache.rs
crates/open-core/src/csp/: directive.rs  eval.rs  mod.rs  parser.rs  source.rs  violation.rs
crates/open-core/src/frame/: mod.rs
crates/open-core/src/http/: client.rs
crates/open-core/src/interact/: action_plan.rs  auto_fill.rs  element.rs  form.rs  js_interact.rs  mod.rs  recording.rs  scroll.rs  wait.rs
crates/open-core/src/intercept/: builtins.rs  mod.rs  rules.rs
crates/open-core/src/js/: bootstrap.js  bootstrap_readonly.js  dom.rs  extension.rs  fetch.rs  mod.rs  ops.rs  runtime.rs  snapshot.rs  sse.rs  timer.rs
crates/open-core/src/js/v8/: isolate_pool.rs  mod.rs  module_cache.rs  snapshot.rs
crates/open-core/src/navigation/: graph.rs  mod.rs
crates/open-core/src/oauth/: flow.rs  mod.rs  oidc.rs  pkce.rs  store.rs  token.rs
crates/open-core/src/output/: json_formatter.rs  llm_formatter.rs  mod.rs
crates/open-core/src/parser/: arena_dom.rs  fast_scanner.rs  lazy.rs  mod.rs  node_pool.rs  preload_scanner.rs  selective.rs  streaming.rs  streaming_semantic.rs
crates/open-core/src/prefetch/: mod.rs  predictor.rs  prefetcher.rs
crates/open-core/src/push/: early_scanner.rs  h2_push.rs  mod.rs  push_cache.rs
crates/open-core/src/resource/: fetcher.rs  mod.rs  pool.rs  priority.rs  scheduler.rs
crates/open-core/src/sandbox/: mod.rs
crates/open-core/src/screenshot/: capture.rs  chrome.rs
crates/open-core/src/semantic/: extract.rs  mod.rs  selector.rs  tree.rs
crates/open-core/src/sse/: client.rs  manager.rs  mod.rs  parser.rs
crates/open-core/src/tab/: manager.rs  mod.rs  state.rs  tab.rs
crates/open-core/src/tls/: mod.rs  pinning.rs
crates/open-core/src/websocket/: connection.rs  manager.rs  mod.rs
crates/open-core/tests/: config_test.rs  csp_test.rs  dedup_extended_test.rs  element_id_test.rs  feed_test.rs  frame_tree_test.rs  meta_refresh_test.rs  output_formatter_test.rs  redirect_chain_test.rs  semantic_extract_test.rs  session_store_test.rs  shadow_dom_piercing_test.rs  shadow_root_test.rs  user_agent_test.rs  websocket_test.rs
crates/open-debug/: Cargo.toml
crates/open-debug/src/: coverage.rs  discover.rs  fetch.rs  formatter.rs  har.rs  record.rs
crates/open-kg/: Cargo.toml
crates/open-kg/src/: config.rs  crawler.rs  discovery.rs  fingerprint.rs  graph.rs  lib.rs  output.rs  state.rs  transition.rs
crates/open-server/: Cargo.toml
crates/open-server/src/: events.rs  handlers.rs  main.rs  router.rs  state.rs  static_files.rs  ws.rs
crates/open-tauri/: package-lock.json  (+2 more)
crates/open-tauri/src-tauri/: Cargo.toml  tauri.conf.json
crates/open-tauri/src-tauri/src/: agent_bridge.rs  browser_window.rs  cdp_bridge.rs  challenge.rs  commands.rs  cookie_bridge.rs  instance.rs  lib.rs  main.rs
crates/pardus-cdp/: Cargo.toml
crates/pardus-cdp/src/: server.rs
crates/pardus-cdp/src/domain/: browser.rs  console.rs  css.rs  dom.rs  emulation.rs  input.rs  mod.rs  network.rs  page.rs  pardus_ext.rs  performance.rs  runtime.rs  security.rs  target.rs
crates/pardus-cdp/tests/: domain_context_test.rs  domain_context_unit_test.rs
crates/pardus-cli/: Cargo.toml
crates/pardus-cli/src/: context.rs  main.rs
crates/pardus-cli/src/commands/: interact.rs  mod.rs  navigate.rs  repl.rs  screenshot.rs  tab.rs
crates/pardus-core/: Cargo.toml
crates/pardus-core/src/: app.rs  config.rs  feed.rs  lib.rs  page.rs  pdf.rs
crates/pardus-core/src/browser/: helpers.rs  history.rs  interact.rs  mod.rs  navigate.rs  tabs.rs  traits.rs
crates/pardus-core/src/frame/: mod.rs
crates/pardus-core/src/interact/: actions.rs  element.rs  form.rs  js_interact.rs  upload.rs
crates/pardus-core/src/js/: bootstrap.js  dom.rs  extension.rs  ops.rs  runtime.rs
crates/pardus-core/src/output/: llm_formatter.rs  md_formatter.rs  tree_formatter.rs
crates/pardus-core/src/screenshot/: mod.rs
crates/pardus-core/src/semantic/: tree.rs
crates/pardus-core/tests/: frame_tree_test.rs  shadow_dom_piercing_test.rs
crates/pardus-debug/: Cargo.toml
crates/pardus-debug/src/: fetch.rs  har.rs  lib.rs
shell/: bench.sh  compare_bench.sh  run_bench.sh  run_tests.sh  test-dom-api.sh  test-screenshot.sh  test.sh
(+87 files in other folders)
