[package]
name = "open-challenge"
version.workspace = true
edition.workspace = true
description = "CAPTCHA / bot-challenge detection and human-in-the-loop resolution for open-browser"

[dependencies]
open-core = { path = "../open-core" }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
