[package]
name = "open-core"
version.workspace = true
edition.workspace = true

[dependencies]
# HTML Parsing
scraper = "0.22"

# Async & HTTP
tokio = { workspace = true }
rquest = { workspace = true }
rquest-util = { workspace = true }
url = { workspace = true }
cookie_store = "0.21"

sha2 = "0.10"
mime_guess = "2"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
regex = "1"
async-trait = { workspace = true }
smallvec = "1"
base64 = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
lru = "0.12"
bumpalo = "3"
fastrand = "2"
getrandom = "0.3"
dirs = "6"

# Network debugging
open-debug = { path = "../open-debug" }
http = "1"
chrono = { workspace = true }

# JS execution (optional — enables --js flag)
deno_core = { workspace = true, optional = true }

# Async stream utilities (used by JS fetch and SSE client)
futures-util = { workspace = true }

# Hashing for cache keys
blake3 = { workspace = true }

# Streaming parser
lol_html = { workspace = true }
encoding_rs = "0.8"
bytes = { workspace = true }

# PDF text extraction
pdf-extract = "0.10"
lopdf = "0.39"

# RSS/Atom feed parsing
feed-rs = "2"

# WebSocket support
tokio-tungstenite = "0.26"
tungstenite = "0.26"

# TLS certificate pinning (optional)
tokio-rustls = { version = "0.26", optional = true }
rustls = { version = "0.23", optional = true }

# HTTP/2 push (optional — low-level PUSH_PROMISE reception)
h2 = { workspace = true, optional = true }

# Screenshot support (optional — enables HTML→PNG via headless Chrome)
chromiumoxide = { version = "0.9", default-features = false, optional = true }
image = { version = "0.25", optional = true }
which = { version = "7", optional = true }

[features]
default = []
js = ["deno_core", "rquest/stream"]
h2-push = ["h2"]
screenshot = ["chromiumoxide", "image", "which"]
tls-pinning = ["dep:tokio-rustls", "dep:rustls"]

[dev-dependencies]
tempfile = "3"
