[package]
name = "open-kg"
version.workspace = true
edition.workspace = true

[dependencies]
open-core = { path = "../open-core" }
open-debug = { path = "../open-debug" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = "0.3"
anyhow = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }
scraper = "0.22"
