[package]
name = "pardus-cdp"
version.workspace = true
edition.workspace = true

[dependencies]
pardus-core = { path = "../pardus-core" }
pardus-debug = { path = "../pardus-debug" }
scraper = "0.22"
tokio = { workspace = true }
tokio-tungstenite = "0.26"
futures-util = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
reqwest = { workspace = true }
anyhow = { workspace = true }
url = "2"
parking_lot = { workspace = true }
base64 = { workspace = true }

[features]
default = []
screenshot = ["pardus-core/screenshot"]
