[package]
name = "pardus-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "pardus-browser"
path = "src/main.rs"

[dependencies]
pardus-core = { path = "../pardus-core", default-features = false }
pardus-cdp = { path = "../pardus-cdp", default-features = false }
pardus-debug = { path = "../pardus-debug" }
pardus-kg = { path = "../pardus-kg" }
clap = { version = "4", features = ["derive"] }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
dirs = "6"
rustyline = "15"
shell-words = "1"

[features]
default = []
js = ["pardus-core/js"]
screenshot = ["pardus-core/screenshot"]
