[package]
name = "pardus-debug"
version.workspace = true
edition.workspace = true

[dependencies]
scraper = "0.22"
reqwest = { version = "0.12", features = ["cookies", "gzip", "brotli", "deflate"] }
tokio = { workspace = true }
url = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
http = "1"
