[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-playwright"
version = "0.1.0"
description = "Drop-in Playwright adapter for OpenBrowser — semantic-only headless browser for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "playwright>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.setuptools.packages.find]
include = ["open_playwright*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
