[package]
name = "open-tauri"
version.workspace = true
edition.workspace = true
description = "Tauri desktop app for Open Browser — agent launcher + CAPTCHA solver"

[lib]
name = "open_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow = { workspace = true }
async-trait = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }

tokio-tungstenite = "0.26"
tokio-util = "0.7"
futures-util = { workspace = true }

open-core = { path = "../../open-core" }
open-challenge = { path = "../../open-challenge" }
open-cdp = { path = "../../open-cdp" }

[features]
custom-protocol = ["tauri/custom-protocol"]
